# microsservi-os-

./: .gitignore  MS-user_key01.pem  README.md
User/: .env  pyproject.toml  requirements.txt
User/app/: DB.py  main.py  models.py  schemas.py  security.py
User/app/routers/: auth.py  users.py
gateway/: pyproject.toml
gateway/app/: main.py
product-service/: .env  pyproject.toml  requirements.txt
product-service/.ebextensions/: 01_python.config
product-service/app/: DB.py  main.py  models.py  schemas.py  settings.py
sales-service/: .env  pyproject.toml  requirements.txt
sales-service/.ebextensions/: 01_python.config
sales-service/app/: DB.py  main.py  models.py  schemas.py
